--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -5,6 +5,6 @@
       %meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
         %title TileEditor
         = stylesheet_link_tag "normalize", "all"
-        = javascript_include_tag "all"
+        = javascript_include_tag "application"
   %body
     = yield
