Putting in the tile editor and fixing dealies

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,3 +1,8 @@
+:coffeescript
+  tileEditor = new Pixie.Editor.Tile.Views.Editor({})
+
+  tileEditor.el.appendTo($('body'))
+
 .welcome
   %h1 Middleman is Watching
   %p.doc
