--- a/source/stylesheets/pixie/editor/tile/main.css.sass
+++ b/source/stylesheets/pixie/editor/tile/main.css.sass
@@ -171,7 +171,7 @@ $module_margin: 12px
         eye
           +inline-block
 
-          background-image: url(/assets/tools/show.png)
+          background-image: url(/pixie/editor/tile/tools/show.png)
           cursor: pointer
           float: right
           height: 16px
