--- a/source/stylesheets/pixie/partials/_tile_tool.sass
+++ b/source/stylesheets/pixie/partials/_tile_tool.sass
@@ -1,3 +1,3 @@
 =tile_tool($name)
   [data-tool=#{$name}]
-    background-image: url(/assets/tools/#{$name}.png)
+    background-image: url(/images/pixie/editor/tile/tools/#{$name}.png)
