Added editor base stylesheet

--- a/source/stylesheets/pixie/editor/tile/main.css.sass
+++ b/source/stylesheets/pixie/editor/tile/main.css.sass
@@ -1,5 +1,7 @@
 @import pixie/util
 
+@import pixie/editor_base.sass
+
 $left_sidebar_width: 60px
 $right_sidebar_width: 220px
 $top_bar_height: 21px
