working toward expected visual style

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
       %meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
         %title TileEditor
-        = stylesheet_link_tag "normalize", "pixie/editor/tile/main"
+        = stylesheet_link_tag "pixie/editor/tile/main"
         = javascript_include_tag "application"
   %body
     = yield
