--- a/source/stylesheets/pixie/_editor_base.sass
+++ b/source/stylesheets/pixie/_editor_base.sass
@@ -1,5 +1,15 @@
 /* Styles common to all editors and editor components (pixel, animation, etc.)
 
+/* TODO: shouldn't apply this to all html, body elements
+html, body
+  height: 100%
+  margin: 0
+  min-height: 100%
+  padding: 0
+
+li
+  list-style: none
+
 /* TODO: Clean up and remove a bunch of this
 #fullscreen
   height: 100%
