hardcoding some testing data

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,4 +1,4 @@
 :coffeescript
-  tileEditor = new Pixie.Editor.Tile.Views.Editor({})
+  tileEditor = new Pixie.Editor.Tile.Views.Editor(window.testConfig)
 
   tileEditor.el.appendTo($('body'))
