--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
       %meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
         %title TileEditor
-        = stylesheet_link_tag "pixie/editor/tile/main"
-        = javascript_include_tag "application"
+        = stylesheet_link_tag "bootstrap.css", "pixie/editor/tile/main"
+        = javascript_include_tag "application", "bootstrap.js"
   %body
     = yield
