Adding base dependency

--- a/source/stylesheets/pixie/editor/tile/main.css.sass
+++ b/source/stylesheets/pixie/editor/tile/main.css.sass
@@ -1,6 +1,10 @@
-@import pixie/util
+//= require pixie/editor_base
 
-@import pixie/editor_base.sass
+@import compass
+@import compass/css3/user-interface
+
+@import pixie/util/bounds
+@import pixie/editor/tile/tile_tool
 
 $left_sidebar_width: 50px
 $right_sidebar_width: 220px
