--- a/source/stylesheets/pixie/editor/tile/main.css.sass
+++ b/source/stylesheets/pixie/editor/tile/main.css.sass
@@ -33,6 +33,9 @@ $toolbar_height: 100%
     &:active
       +opacity(0.8)
 
+  ul
+    margin: 0
+
   hr
     +box-shadow(rgba(0, 0, 0, 0.2) 0 1px inset)
 
