adding tooltips to preview entity instance properties

--- a/source/stylesheets/pixie/editor/tile/main.css.sass
+++ b/source/stylesheets/pixie/editor/tile/main.css.sass
@@ -353,3 +353,11 @@ $toolbar_height: 100%
     &.props
       .propsIcon
         display: block
+
+.tooltip-inner
+  p
+    margin: 0
+    text-align: left
+
+  .key
+    font-weight: bold
