--- a/source/stylesheets/pixie/editor/tile/main.css.sass
+++ b/source/stylesheets/pixie/editor/tile/main.css.sass
@@ -85,8 +85,9 @@ $toolbar_height: 100%
       position: absolute
       top: 10px
 
-      button
-        margin: 1px
+      .hotkey
+        float: right
+        font-style: italic
 
   table.properties
     background-color: transparent
