getting latest jasmine-headless-webkit working with hamlc templates

--- a/lib/assets/stylesheets/pixie/editor/tile/main.css.sass
+++ b/lib/assets/stylesheets/pixie/editor/tile/main.css.sass
@@ -138,6 +138,10 @@ $toolbar_height: 100%
     .component
       position: relative
 
+      .entity_image
+        max-height: 32px
+        max-width: 32px
+
       h3
         +inline-block
 
