--- a/lib/assets/stylesheets/pixie/editor/tile/main.css.sass
+++ b/lib/assets/stylesheets/pixie/editor/tile/main.css.sass
@@ -49,7 +49,8 @@ $toolbar_height: 100%
       +opacity(0.8)
 
   ul
-    margin: 0
+    margin-left: 0
+    margin-right: 0
 
   hr
     border: none
@@ -96,13 +97,12 @@ $toolbar_height: 100%
         width: $right_sidebar_width
 
     .actions.top
-      left: 70px
+      left: 61px
       position: absolute
       top: 10px
 
       .hotkey
         float: right
-        font-style: italic
 
   table.properties
     background-color: transparent
