--- a/lib/assets/index.html.haml
+++ b/lib/assets/index.html.haml
@@ -1,4 +1,16 @@
-:coffeescript
-  tileEditor = new Pixie.Editor.Tile.Views.Editor(window.testConfig)
+<!doctype html>
+%html
+  %head
+    %meta(charset="utf-8")
+      %meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
+        %title TileEditor
+        = stylesheet_link_tag "http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css"
+        = stylesheet_link_tag "bootstrap.css", "pixie/editor/tile/main"
+        = javascript_include_tag "http://code.jquery.com/jquery-1.8.2.js"
+        = javascript_include_tag "http://code.jquery.com/ui/1.9.0/jquery-ui.js"
+        = javascript_include_tag "application"
+  %body
+    :coffeescript
+      tileEditor = new Pixie.Editor.Tile.Views.Editor(window.testConfig)
 
-  tileEditor.el.appendTo($('body'))
+      tileEditor.el.appendTo($('body'))
