Using bootstrap-sass gem

--- a/lib/assets/stylesheets/pixie/editor/tile/_tile_tool.sass
+++ b/lib/assets/stylesheets/pixie/editor/tile/_tile_tool.sass
@@ -1,3 +1,3 @@
 =tile_tool($name)
   [data-tool=#{$name}]
-    background-image: url(/images/pixie/editor/tile/tools/#{$name}.png)
+    background-image: asset-url("pixie/editor/tile/tools/#{$name}.png", image)
