--- a/lib/assets/index.html.haml
+++ b/lib/assets/index.html.haml
@@ -5,7 +5,7 @@
       %meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
         %title TileEditor
         = stylesheet_link_tag "http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css"
-        = stylesheet_link_tag "bootstrap.css", "pixie/editor/tile/main"
+        = stylesheet_link_tag "pixie/editor/tile/main"
         = javascript_include_tag "http://code.jquery.com/jquery-1.8.2.js"
         = javascript_include_tag "http://code.jquery.com/ui/1.9.0/jquery-ui.js"
         = javascript_include_tag "application"
