--- a/lib/assets/stylesheets/pixie/editor/tile/main.css.sass
+++ b/lib/assets/stylesheets/pixie/editor/tile/main.css.sass
@@ -358,10 +358,13 @@ $toolbar_height: 100%
       height: 100%
 
     .propsIcon
+      background-image: asset-url("pixie/editor/tile/table.png", image)
       display: none
+      height: 16px
       position: absolute
       top: -1px
       right: -3px
+      width: 16px
 
     &.props
       .propsIcon
